# todo-django

./: Procfile  README.md  pyproject.toml  requirements.txt
app/core/: models.py  test_db.py  tests.py  urls.py  views.py
app/core/database/: context_manager.py  helpers.py  sqlite.py
app/core/migrations/: 0001_initial.py  0002_alter_todoitem_added_at_and_more.py  0003_alter_todoitem_added_at.py  0004_alter_todoitem_options_todoitem_user_and_more.py  0005_task_delete_todoitem_and_more.py
app/core/static/core/: basic_styling.css  style.css  styles.css
app/core/templates/core/: base.html  confirm_deletion.html  home.html  index.html  login.html  register.html  task_confirm_delete.html  task_form.html
app/core/templates/old/: base.html  index.html
app/todo/: settings.py  urls.py
