[tool.poetry]
name = "todo-django"
version = "0.1.0"
description = "todo app built in django"
authors = ["Dhruv <good-times-ahead@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
Django = "^4.0.2"
python-dotenv = "^0.19.2"
gunicorn = "^20.1.0"
whitenoise = "^6.0.0"
psycopg2-binary = "^2.9.3"
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]
coverage = "^6.3.1"
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
